[package]
name = "casino-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio-postgres = "0.7.10"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
async-std = "1.12.0"